2011-01-07  JMB  Fremantle checkbox bugfixes, cppcheck warning fixes

    Fixed some erratic checkbox functionality (especially in lists on
    Fremantle) in the columns editor, sorting editor, and view editor.  Also
    fixed a few spots in the code which triggered warnings in cppcheck.

2011-01-01  JMB  Doxygen updates, Windows build fixes

    Made some improvements to the Doxygen documentation generation process and
    content.  Fixed some bugs that crept up in the Windows build since the
    2.0 release.

2010-12-30  JMB  Decimal formatting, view model, and condition editor bugfixes

    Fixed a bug that prevented negative decimals between 0 and -1 from being
    entered, another that could sometimes trigger a crash when a row was
    edited so that it no longer passed the current filter, and a third that
    prevented the condition editor from being correctly initialized when
    starting with a condition based on an enum column.

2010-12-16  JMB  Allow boolean columns in calculations

    Boolean columns can now be used in calculations; they take the value of
    either 1 (true) or 0 (false).

2010-11-14  JMB  Fixed bugs in number formatting

    Fixed a couple of outstanding bugs that impacted locales which use the
    the period as an integer grouping separator.

2010-10-28  JMB  More intuitive import dialog sequence

    The sequence of dialogs when importing a MobileDB or XML file now makes
    more sense; the user is prompted first for the file to import, then for
    the name of the new file to create.

2010-10-27  JMB  Build instructions update, translation files cleanup

    Mentioned the need to prepare the translation files in the compilation
    instructions.  Removed some extraneous empty "location" elements in the
    Qt translation files that were causing Pootle (a translation server I'm in
    the process of setting up) to choke.

2010-08-16  JMB  Note button sizing fix, more info in file properties dialog
