@@ -164,7 +164,7 @@ This is the main screen of the application, where you can browse the database's 
 <li><a href="#toolbar">Toolbar buttons</a></li>
 </ul>
 <a name="navi"><i>Row display and navigation</i></a><br>
-Most of the data viewer screen is occupied by a table showing one view of a set of rows in the database.  You can scroll through the entire list of rows passing the current filter; performance stays good because only the data for the rows currently shown in the display is loaded.  Clicking on a row normally launches the <a href="#rowview">row viewer</a> dialog; if you disabled this in the <a href="#prefs">preferences dialog</a>, you can stil launch it by double-clicking on a row or pressing enter/return, space, or Control-R (Command-R on the Mac) while a row is selected.<br>
+Most of the data viewer screen is occupied by a table showing one view of a set of rows in the database.  You can scroll through the entire list of rows passing the current filter; performance stays good because only the data for the rows currently shown in the display is loaded.  Clicking on a row normally launches the <a href="#rowview">row viewer</a> dialog; if you disabled this in the <a href="#prefs">preferences dialog</a>, you can stil launch it pressing enter/return, space, or Control-R (Command-R on the Mac) while a row is selected.<br>
 <br>
 Clicking on a cell in the data display and holding down for 1/2 second or longer before releasing executes special functions.  If you do this on a cell in a Note column, the <a href="#noteedit">note viewer</a> is displayed showing the content of that note.  When done on a cell in an Image column, the image contained in that cell is shown in the <a href="#imageview">image viewer</a>.  If you do it in any other type of column, the <a href="#rowedit">row editor</a> for the row you clicked on is launched.<br>
 <br>
